2011-06-10 Matthias Scholz <ms@jammerhund.de>
	* Fix NullPointerException in SystemLayerFinder.getLayer() and 
		SelectionStyllingOptionsPanel.okPressed(), if no active internal frame
		is there.
		The NPE's came when you press the OK button in the options dialog.

2011-05-28 mmichaud <michael.michaud@free.fr>
    * ui improvements : add/change icons from Giuseppe Aruta distribution (jefre)
      File>SaveProject
      File>SaveProjectAs
      File>Open Wizard>Database
      File>Open wizard>Open File : same icon as File>Open File
      File>Open Wizard>Open Project : same icon as File>Open Project
      Help>Keyboard
      Help>Info
      LayerPopup > LayerProperties
      
2011-05-08 mmichaud <michael.michaud@free.fr>
    * added some I18N strings (tab Skin of Option menu, Tooltip for NoteTool,
      Plume tool, AdvancedMeasureTool)
    * Moved SaveLegendPlugIn from Layer main menu to LayerName popup menu
    * Moved CopyImagePlugIn from View to File menu
    * Moved EasyButtonsPlugIn from View to Customize
    * Add Icon to SaveLegendPlugIn

2011-04-20 mmichaud <michael.michaud@free.fr>
    * added org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn
      the plugin is deactivated by default but it is called by SaveProjectAsPlugIn
      
2011-04-13 mmichaud <michael.michaud@free.fr>
    * Small improvements of RunDataStoreQueryPanel : remove the option to set
      Max Features (can be set with a limit SQL clause) and add a textField to
      input the Layer Name
    * Can now persist editable, selectable and readonly attributes in the
      project (bug id 2680312)

2011-04-05 mmichaud <michael.michaud@free.fr>
    * org.openjump.core.ui.plugin.tools.statistics.StatisticOverViewPlugIn
      Fix bug 3229892 throwing NPE while processing an empty layer
    * org.openjump.core.ui.plugin.tools.analysis.onelayer.MergeSelectedPolygonsWithNeighbourPlugIn
      Fix bug 3060942 : merge selected polygons with adjacent polygons having the